# AI-Football-

./: .env.example  .gitignore  README.md  pyproject.toml  test_tracking.py
fie/: config.py
fie/analytics/: academy.py  fatigue.py  opponent.py  passport.py  player_match_stats.py  scouting.py  team_dna.py
fie/api/: main.py
fie/api/routes/: academy.py  analytics.py  clipping.py  explainability.py  llm.py  match_stats.py  mistakes.py  opponent.py  prediction.py  ratings.py  reports.py  search.py  tactical.py  team_analytics.py  tracking.py
fie/api/schemas/: tracking.py
fie/clipping/: clipper.py
fie/explainability/: explainer.py
fie/llm/: coach_assistant.py  match_story.py
fie/models/event_detection/: inference.py  model.py  train.py
fie/prediction/: __init__.py  features.py  goal_probability.py  match_predictor.py
fie/ratings/: aggregator.py  calculator.py
fie/reports/: __init__.py  generator.py
fie/search/: query_engine.py  video_index.py
fie/tactical/: __init__.py  compactness.py  formation.py  mistakes.py  pipeline.py  pressing.py
fie/tracking/: calibration.py  detector.py  metrics.py  pipeline.py  source.py  tracker.py
scripts/: download_statsbomb.py  precompute_dataset.py
tests/: test_integration.py
